rendu flex de l'interface

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMAT IT</title>
     <meta name="description" content="Application de gestion d'inventaire réseau pour plusieurs sites" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="SAMAT" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
